# bandcrash

./: .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  Bandcrash.spec  LICENSE  Makefile  README.md  bandcrash-gui.py  bump-version.sh  defuse-libraries.sh  get-version.sh  make-universal2.py  make-universal2.sh  make.sh  mypy.ini  pylintrc  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
art/: bclogo.afdesign  doc-icon.afdesign
bandcrash/: __init__.py  __main__.py  __version__.py  args.py  cdda.py  cli.py  gui.py  images.py  options.py  util.py
bandcrash/gui/: __init__.py  datatypes.py  encoder.py  file_utils.py  track_editor.py  widgets.py
bandcrash/jinja_templates/: index.html  player.js
bandcrash/players/: camptown.py
bandcrash/players/blamscamp/: __init__.py  index.html  player.css  player.js
blamscamp/: __init__.py  __main__.py  __version__.py  images.py  util.py
blamscamp/jinja_templates/: index.html  player.css  player.js
docs/: cd-authoring.rst  cli.rst  conf-rtd.py  conf.py  gui.rst  index.rst  itch.rst  library.rst  metadata.rst  player.rst  requirements.txt
docs/_static/: custom.css
test_album/: album.json  lyric-file.txt
tests/: dragdrop.bcalbum  moved-dir.bcalbum
tests/album/: album.json  errors.bcalbum  lyric-file.txt  lyrics-iso8859.txt  poiu-fojar.css  save_last_paths.bcalbum  test-options.json
tests/derived/: 1 first track.txt
