[tool.poetry]
name = "bandcrash"
version = "0.7.0"
description = "Tools for publishing albums to the web and digital stores"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fluffy-critter/bandcrash"
documentation = "https://bandcrash.readthedocs.io/"
include = [
    "bandcrash/__version__.py"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
mutagen = "^1.45.1"
awesome-slugify = "^1.6.5"
Jinja2 = "^3.0.3"
chardet = "^4.0.0"
pyside6 = {version = "^6.5.3", optional = true}
pyffmpeg = "^2.4.2.18.1"
pillow = [
    { platform = "darwin", version = "^10.1.0", source = "devpi-fluffy" },
    { markers = "sys_platform != 'darwin'", version = "^10.1.0", source = "pypi"}
]
camptown = "^0.2.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
isort = "^5.12.0"
pylint = "^3.0.1"
mypy = "^1.5.1"
types-python-slugify = "^8.0.0.3"
types-chardet = "^5.0.4.6"
pyinstaller = "^6.0.0"
delocate = "^0.10.4"
pyside6-stubs = "^6.4.2.0"
sphinx-rtd-theme = "^1.3.0"
sphinx = "^7.2.6"

[tool.poetry.extras]
gui = [ "pyside6" ]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "devpi-fluffy"
url = "https://m.devpi.net/fluffy/prod/+simple"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bandcrash = 'bandcrash.cli:main'
bandcrash-gui = 'bandcrash.gui:main'
