[tool.poetry]
name = "bandcrash"
version = "0.9.5"
description = "Tools for publishing albums to the web and digital stores"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/fluffy-critter/bandcrash"
documentation = "https://bandcrash.readthedocs.io/"
include = [
    "bandcrash/__version__.py"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
mutagen = "^1.45.1"
chardet = "^4.0.0"
pyside6 = { version = ">=6.8,<6.9", optional = true }
pyffmpeg = "^2.4.2.18.1"
pillow = "^11.3.0"
camptown = "^0.3.7"
unidecode = "^1.3.8"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
isort = "^5.12.0"
pylint = "^3.0.1"
mypy = "^1.5.1"
types-chardet = "^5.0.4.6"
pyinstaller = "^6.0.0"
pyside6-stubs = "^6.4.2.0"
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"

[tool.poetry.extras]
gui = [ "pyside6" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bandcrash = 'bandcrash.cli:main'
bandcrash-gui = 'bandcrash.gui:main'

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

